Added netlify link to footer and included bootstrap via CDN.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Find a weather forecast</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+			crossorigin="anonymous"
+		/>
 	</head>
 	<body>
 		<h1>Find a weather forecast</h1>
@@ -20,8 +26,14 @@
 				href="https://github.com/clkaha/weather-app-project"
 				target="_blank"
 				rel="noopener noreferrer"
-			></a>
-			GitHub, and is hosted on Netlify.
+				>GitHub</a
+			>, and is hosted on
+			<a
+				href="https://find-a-weather-forecast.netlify.app/"
+				target="_blank"
+				rel="noopener noreferrer"
+				>Netlify</a
+			>.
 		</footer>
 	</body>
 	<script src="script.js"></script>
