Reworded link text in footer.

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 				target="_blank"
 				rel="noopener noreferrer"
 				>Claire H</a
-			>, is on
+			>, is
 			<a
 				href="https://github.com/clkaha/weather-app-project"
 				target="_blank"
 				rel="noopener noreferrer"
-				>GitHub</a
-			>, and is hosted on
+				>open-sourced on GitHub</a
+			>, and is
 			<a
 				href="https://find-a-weather-forecast.netlify.app/"
 				target="_blank"
 				rel="noopener noreferrer"
-				>Netlify</a
+				>hosted on Netlify</a
 			>.
 		</footer>
 	</body>
