--- a/index.html
+++ b/index.html
@@ -5,63 +5,59 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Find a weather forecast</title>
 		<link rel="stylesheet" href="styles.css" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-			crossorigin="anonymous"
-		/>
 	</head>
 	<body>
-		<h1>Find a weather forecast</h1>
-		<form>
-			<input
-				type="search"
-				name=""
-				id="search-input"
-				placeholder="Enter a city..."
-				required
-			/>
-			<input type="submit" value="Search" />
-		</form>
-		<h2>City name</h2>
-		<h3 class="visually-hidden">Today's weather for city name</h3>
-		<div>
-			<p>
-				Friday 11:28, overcast clouds <br />
-				Humidity: 82%, Wind: 5.14km/h
-			</p>
-		</div>
-		<div>
-			<p>🫣 12°C</p>
-		</div>
-		<div>
-			<h3>Day-by-day forecast for city name</h3>
+		<main>
+			<h1>Find a weather forecast</h1>
+			<form>
+				<input
+					type="search"
+					name=""
+					id="search-input"
+					placeholder="Enter a city..."
+					required
+				/>
+				<input type="submit" value="Search" />
+			</form>
+			<h2>City name</h2>
+			<h3 class="visually-hidden">Today's weather for city name</h3>
 			<div>
-				<h4>Saturday</h4>
-				<p>🥳<br />17°C</p>
+				<p>
+					Friday 11:28, overcast clouds <br />
+					Humidity: 82%, Wind: 5.14km/h
+				</p>
 			</div>
 			<div>
-				<h4>Sunday</h4>
-				<p>🥳<br />17°C</p>
+				<p>🫣 12°C</p>
 			</div>
 			<div>
-				<h4>Monday</h4>
-				<p>🥳<br />17°C</p>
+				<h3>Day-by-day forecast for city name</h3>
+				<div>
+					<h4>Saturday</h4>
+					<p>🥳<br />17°C</p>
+				</div>
+				<div>
+					<h4>Sunday</h4>
+					<p>🥳<br />17°C</p>
+				</div>
+				<div>
+					<h4>Monday</h4>
+					<p>🥳<br />17°C</p>
+				</div>
+				<div>
+					<h4>Tuesday</h4>
+					<p>🥳<br />17°C</p>
+				</div>
+				<div>
+					<h4>Wednesday</h4>
+					<p>🥳<br />17°C</p>
+				</div>
+				<div>
+					<h4>Thursday</h4>
+					<p>🥳<br />17°C</p>
+				</div>
 			</div>
-			<div>
-				<h4>Tuesday</h4>
-				<p>🥳<br />17°C</p>
-			</div>
-			<div>
-				<h4>Wednesday</h4>
-				<p>🥳<br />17°C</p>
-			</div>
-			<div>
-				<h4>Thursday</h4>
-				<p>🥳<br />17°C</p>
-			</div>
-		</div>
+		</main>
 		<footer>
 			This project was coded by
 			<a
