--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Find a weather forecast</title>
 		<link rel="stylesheet" href="styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<main>
-			<h1>Find a weather forecast</h1>
+			<h1 align="center">Find a weather forecast</h1>
 			<form>
 				<input
 					type="search"
@@ -21,7 +27,7 @@
 			</form>
 			<h2>City name</h2>
 			<h3 class="visually-hidden">Today's weather for city name</h3>
-			<div>
+			<div id="weather-today">
 				<p>
 					Friday 11:28, overcast clouds <br />
 					Humidity: 82%, Wind: 5.14km/h
