Changed colour of today weather values.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				<div>
 					<p id="conditions-today">
 						Overcast clouds <br />
-						Humidity: 82% <br />
-						Wind: 5.14km/h
+						Humidity: <span id="humidity-value">82%</span> <br />
+						Wind: <span id="windspeed">5.14km/h</span>
 					</p>
 				</div>
 				<div>
