--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<main>
 			<h1 align="center">Find a weather forecast</h1>
-			<form class="search-form">
+			<form id="search-form">
 				<input
 					type="search"
 					name=""
