--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap"
 			rel="stylesheet"
 		/>
+		<script src="https://unpkg.com/axios@1.13.2/dist/axios.min.js"></script>
 	</head>
 	<body>
 		<main>
