Updated function so city name is updated in all headings.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 				<input type="submit" id="search-submit" value="Search" />
 			</form>
 			<h2 id="city-name">City name</h2>
-			<h3 class="visually-hidden">Today's weather for city name</h3>
+			<h3 id="todays-weather-heading" class="visually-hidden">
+				Today's weather forecast
+			</h3>
 			<div id="weather-today">
 				<div>
 					<p id="conditions-today">
@@ -38,40 +40,42 @@
 				</div>
 				<div>
 					<p id="temperature-today">
-						<span id="temperature-today-icon">🫣</span
-						><span id="temperature-today-value"> 12°C</span>
+						<span id="temperature-today-icon"></span
+						><span id="temperature-today-value"></span>
 					</p>
 				</div>
 			</div>
 			<div>
-				<h3 class="visually-hidden">Day-by-day forecast for city name</h3>
+				<h3 id="next-six-days-heading" class="visually-hidden">
+					Weather forecast for the next six days
+				</h3>
 				<div id="next-six-days">
-					<div class="day-summary">
+					<div id="day2" class="day-summary">
 						<h4>Sat</h4>
 						<p>🥳</p>
 						<p>17°C</p>
 					</div>
-					<div class="day-summary">
+					<div id="day3" class="day-summary">
 						<h4>Sun</h4>
 						<p>🥳</p>
 						<p>17°C</p>
 					</div>
-					<div class="day-summary">
+					<div id="day4" class="day-summary">
 						<h4>Mon</h4>
 						<p>🥳</p>
 						<p>17°C</p>
 					</div>
-					<div class="day-summary">
+					<div id="day5" class="day-summary">
 						<h4>Tue</h4>
 						<p>🥳</p>
 						<p>17°C</p>
 					</div>
-					<div class="day-summary">
+					<div id="day6" class="day-summary">
 						<h4>Wed</h4>
 						<p>🥳</p>
 						<p>17°C</p>
 					</div>
-					<div class="day-summary">
+					<div id="day7" class="day-summary">
 						<h4>Thu</h4>
 						<p>🥳</p>
 						<p>17°C</p>
